--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.THEATERBUZZ">
-        <activity android:name=".RegisterMovieActivity"></activity>
+        <activity android:name=".RatingsActivity"></activity>
+        <activity android:name=".SearchActivity" />
+        <activity android:name=".EditMoviesActivity" />
+        <activity android:name=".FavouritesActivity" />
+        <activity android:name=".DisplayMovieActivity" />
+        <activity android:name=".RegisterMovieActivity" />
         <activity
             android:name=".IntroScreen"
             android:theme="@style/Theme.AppCompat.NoActionBar">
@@ -19,8 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-        </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
